# GameClient

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  protocol copy  protocol.txt
assets/: Astronaut.iqm
include/: Asio.hpp  AsioClass.hpp  Camera.hpp  Command.hpp  Core.hpp  EventHandler.hpp  GameData.hpp  Graphic.hpp  Map.hpp  MapRender.hpp  Packet.hpp  PlayerRender.hpp  Raylib.hpp  SettingsHandler.hpp  Window.hpp  client.hpp
src/: main.cpp
src/asio/: asio_class.cpp
src/client/: client.cpp
src/client/command/: command.cpp  forbidden.cpp  newConnection.cpp  otherPlayerConnection.cpp  otherPlayerDisconnection.cpp  otherPlayerMove.cpp  playerNotFound.cpp
src/graphic/: camera.cpp  graphic.cpp  map.cpp  window.cpp
src/graphic/event/: event.cpp
src/graphic/event/firstPerson/: eventFirtPerson.cpp
src/graphic/event/menu/: eventMenu.cpp
src/graphic/raylib/: camera.cpp  map.cpp  playerRender.cpp  raylib.cpp  window.cpp
src/graphic/render/: mapRender.cpp  playerRender.cpp
src/graphic/settings/: settings.cpp
